--- a/internal/mailer/templates/user_welcome.tmpl.html
+++ b/internal/mailer/templates/user_welcome.tmpl.html
@@ -9,7 +9,7 @@ For future reference, your user ID number is {{.ID}}.
 
 Please send a request to the `PUT /v1/users/activated` endpoint with the following JSON
 body to activate your account:
-{"token":"{{.activatedToken}}"}
+{"token":"{{.activationToken}}"}
 Please note that this is a one-time use token and it will expire in 3 days.
 
 Thanks,
